--- a/Client/Shared/ProductList.razor
+++ b/Client/Shared/ProductList.razor
@@ -1,4 +1,30 @@
-﻿@code {
+﻿<ul class+="list-unstyled">
+    @foreach (var product in products)
+   {
+       <li class="media my-3">
+           <div class = "media-img-wrapper mr-2">
+               <a href="/product/@product.Id">
+                <img class = "media-img" src="@product.Image" alt="@product.Title" />    
+               </a>
+           </div>
+           
+           <div class="media-body">
+               <a href="/product/@product.Id">
+               <h4 class="mb-0">@product.Title</h4>    
+               </a>
+               <p>@product.Description</p>
+               @if(product.OriginalPrice > product.Price)
+                {
+                    
+                }
+            </div>
+
+       </li>
+   }
+</ul>
+
+
+@code {
     List<Product> products = new List<Product>
     {
         new Product
