--- a/Client/Shared/ProductList.razor
+++ b/Client/Shared/ProductList.razor
@@ -1,4 +1,5 @@
-﻿<ul class+="list-unstyled">
+﻿<!-- GPG KEYS TEST-->
+<ul class="list-unstyled">
     @foreach (var product in products)
    {
        <li class="media my-3">
