--- a/Client/Shared/ProductList.razor
+++ b/Client/Shared/ProductList.razor
@@ -1,6 +1,7 @@
-﻿<!-- GPG KEYS TEST-->
+﻿@inject IProductService ProductService
+
 <ul class="list-unstyled">
-    @foreach (var product in products)
+    @foreach (var product in ProductService.Products)
    {
        <li class="media my-3">
            <div class = "media-img-wrapper mr-2">
@@ -29,27 +30,8 @@
 
 
 @code {
-    List<Product> products = new List<Product>
+    protected override void OnInitialized()
     {
-        new Product
-        {
-            Id =1,
-            CategoryId = 1,
-            Title  = "Call of Duty 4: Modern Warfare",
-            Description = " мультиплатформенная компьютерная игра в жанре шутера от первого лица, разработанная американской компанией Infinity Ward и изданная Activision. Игра является четвёртой в серии Call of Duty и первой в подсерии Modern Warfare; официально проект был анонсирован 26 мая 2007 года.",
-            Image = "https://upload.wikimedia.org/wikipedia/ru/2/29/Cod4.jpg",
-            Price = 9.99m,
-            OriginalPrice  = 19.99m,
-        },
-        new Product
-        {
-            Id=2,
-            CategoryId =3,
-            Title = "Half-Life 2",
-            Description = "Half-Life 2 Description",
-            Image ="https://upload.wikimedia.org/wikipedia/en/2/25/Half-Life_2_cover.jpg",
-            Price = 8.19m,
-            OriginalPrice = 29.99m
-        }
-    };
+        ProductService.LoadProducts();
+    }
 }
