--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -38,9 +38,22 @@ a, .btn-link {
     transition: transform .2;
 }
 
+.media-img-big {
+    max-height: 500px;
+    max-width: 500px;
+    border-radius: 6px;
+    margin-bottom: 10px;
+}
+
 .media-img-wrapper {
     width: 200px;
     height: 200px;
+    text-align: center;
+}
+
+.media-img-big-wrapper {
+    width: 500px;
+    height: 500px;
     text-align: center;
 }
 
@@ -74,3 +87,19 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+@media (max-width: 1023.98px) {
+    .media {
+        flex-direction: column;
+    }
+
+    .media-img-big-wrapper, .media-img-wrapper {
+        width: 100%;
+        height: auto;
+        text-align: center;
+    }
+
+    .media-img-big {
+        max-width: 300px;
+    }
+}
