feat: division into categories, new page

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,3 +1,37 @@
 ﻿@page "/"
+@page "/{categoryurl}"
+@inject ICategoryService CategoryService;
 
-<ProductList/>
+@if(category != null)
+{
+    <h1>Добро пожаловать в секцию @category.Name</h1>
+    <ProductList CategoryId="@category.Id" />
+}
+else
+{
+    <h1>Добро пожаловать в магазин ключей Steam</h1>
+    <ProductList/>
+}
+
+
+
+@code
+{
+    [Parameter]
+    public string CategoryUrl { get; set; }
+
+    private Category category = null;
+
+    protected override void OnParametersSet()
+    {
+        if(CategoryUrl != null)
+        {
+            category = CategoryService.Categories.FirstOrDefault(c => c.Url.ToLower().Equals(CategoryUrl.ToLower()));
+        }
+        else
+        {
+            category = null;
+        }
+    }
+}
+
