--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -10,3 +10,4 @@
 @using BlazorShop.Client.Shared
 @using BlazorShop.Shared
 @using BlazorShop.Client.Services.ProductService
+@using BlazorShop.Client.Services.CategoryService
