--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,11 +1,12 @@
 ﻿@page "/"
 @page "/{categoryurl}"
 @inject ICategoryService CategoryService;
+@inject IProductService ProductService;
 
 @if(category != null)
 {
     <h1>Добро пожаловать в секцию @category.Name</h1>
-    <ProductList CategoryId="@category.Id" />
+    <ProductList />
 }
 else
 {
@@ -22,8 +23,9 @@ else
 
     private Category category = null;
 
-    protected override void OnParametersSet()
+    protected override async Task OnParametersSetAsync()
     {
+        await ProductService.LoadProducts(CategoryUrl);
         if(CategoryUrl != null)
         {
             category = CategoryService.Categories.FirstOrDefault(c => c.Url.ToLower().Equals(CategoryUrl.ToLower()));
