--- a/Client/Shared/ProductList.razor
+++ b/Client/Shared/ProductList.razor
@@ -1,7 +1,7 @@
 ﻿@inject IProductService ProductService
-
+@implements IDisposable
 <ul class="list-unstyled">
-    @foreach (var product in CategoryId==null ? ProductService.Products : ProductService.Products.Where(p => p.CategoryId == CategoryId))
+    @foreach (var product in  ProductService.Products)
    {
        <li class="media my-3">
            <div class = "media-img-wrapper mr-2">
@@ -30,11 +30,16 @@
 
 
 @code {
-    [Parameter]
-    public int? CategoryId { get; set; } = null;
+    //[Parameter]
+    //public int? CategoryId { get; set; } = null;
 
     protected override void OnInitialized()
     {
-        ProductService.LoadProducts();
+        //await ProductService.LoadProducts();
+        ProductService.OnChange += StateHasChanged;
+    }
+    public void Dispose()
+    {
+        ProductService.OnChange -= StateHasChanged;
     }
 }
