--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -19,7 +19,7 @@
         {
             <li class="nav-item px-3">
             <NavLink class="nav-link" href="@category.Url">
-                <span class="oi oi-@category.Icon" aria-hidden="true"></span> @category.Name
+            <img class = "media-img mr-2" src="@category.Icon" /> @category.Name
             </NavLink>
             </li>
         }
