--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -11,3 +11,7 @@
 @using BlazorShop.Shared
 @using BlazorShop.Client.Services.ProductService
 @using BlazorShop.Client.Services.CategoryService
+@using BlazorShop.Client.Services.CartService
+@using Blazored.LocalStorage
+@using Blazored.Toast
+@using Blazored.Toast.Services
