feat: Authentication & User Login

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,6 +2,7 @@
 @page "/{categoryurl}"
 @inject ICategoryService CategoryService;
 @inject IProductService ProductService;
+@inject ISyncLocalStorageService LocalStorage
 
 @if(category != null)
 {
@@ -10,7 +11,15 @@
 }
 else
 {
-    <h1>Добро пожаловать в магазин ключей Steam</h1>
+    <AuthorizeView>
+        <NotAuthorized>
+            <h1>Добро пожаловать в магазин ключей Steam</h1>
+        </NotAuthorized>
+        <Authorized>
+            <h1>Добро пожаловать обратно, @LocalStorage.GetItemAsString("username")</h1>
+        </Authorized>
+    </AuthorizeView>
+    
     <ProductList/>
 }
 
