--- a/Client/Pages/Cart.razor
+++ b/Client/Pages/Cart.razor
@@ -1,11 +1,12 @@
 ﻿@page "/cart"
 @inject ICartService CartService
 
-<h3>Корзина</h3>
-
-@if(cartItems == null || cartItems.Count <= 0)
+@if (!orderPlaced)
 {
-	<span>У вас пустая корзина (</span>
+	<h3>Корзина</h3>
+	@if(cartItems == null || cartItems.Count <= 0)
+{
+	<span>У вас пустая корзина :(</span>
 } 
 else
 {
@@ -18,18 +19,47 @@ else
 				<h5><a href="/product/@item.ProductId">@item.ProductTitle</a></h5>
 				<span>@item.EditionName</span><br>
 				<button class="btn-delete" @onclick="@(()=>DeleteItem(item))">Убрать</button>
+				<EditForm Model="item">
+					<InputNumber id="quantity" @bind-Value="item.Quantity" class="form-control" style="width: 70px" />
+				</EditForm>
 			</div>
-			<div class="item-price">$@item.Price</div>
+			<div class="item-price">$@(item.Price * item.Quantity)</div>
 			</div>
 		}
 		<div class="item-price">
-			Всего: (@cartItems.Count): $@cartItems.Sum(item => item.Price)
+			Всего: (@cartItems.Count): $@cartItems.Sum(item => item.Price * item.Quantity)
+		</div>
+		<div style="text-align: center; margin-top: 10px">
+			<button class="btn btn-primary btn-lg" @onclick="PlaceOrder">Оформить заказ.</button>
+		</div>
+	</div>
+	}
+}
+else
+{
+	<h3>Спасибо за ваш заказ!</h3>
+	<h4>Ваш заказ: </h4>
+	<div>
+		@foreach(var item in cartItems)
+		{
+			<div class="item-container">
+			<div class="item-image-wrapper"><img src="@item.Image" class="item-image"/></div>
+			<div class="item-name">
+				<h5><a href="/product/@item.ProductId">@item.ProductTitle</a></h5>
+				<span>@item.EditionName</span><br>
+			</div>
+			<div class="item-price">$@(item.Price * item.Quantity)</div>
+			</div>
+		}
+		<div class="item-price">
+			Всего: (@cartItems.Count): $@cartItems.Sum(item => item.Price * item.Quantity)
 		</div>
 	</div>
 }
 
 @code {
 	List<CartItem> cartItems;
+	bool orderPlaced = false;
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -40,5 +70,11 @@ else
 	{
 		await CartService.DeleteItem(item);
 		cartItems = await CartService.GetCartItems();
+	}
+
+	private async Task PlaceOrder()
+	{
+		orderPlaced = true;
+		await CartService.EmptyCart();
 	}
 }
