--- a/Client/Pages/ProductDetails.razor
+++ b/Client/Pages/ProductDetails.razor
@@ -34,6 +34,12 @@
 				$@GetSelectedVariant().Price
 			</h4>
 		}
+		<EditForm Model="cartItem">
+			<div class="form-group">
+				<InputNumber id="quantity" @bind-Value="cartItem.Quantity" class="form-control" style="width: 70px;" /> 
+			</div>
+		</EditForm>
+
 		<button class="btn btn-primary" @onclick="AddToCart"> <i class="oi oi-cart"></i>&nbsp;&nbsp;&nbsp;Добавить в корзину</button>
 	</div>
 </div>
@@ -41,6 +47,8 @@
 @code {
 	private Product product = new Product();
 	private int currentEditionId = 1;
+
+	private CartItem cartItem = new CartItem {Quantity = 1};
 
 	[Parameter]
 	public int Id { get; set; }
@@ -61,7 +69,15 @@
 		return variant;
 	}
 
-	private async Task AddToCart(){
-		await CartService.AddToCart(GetSelectedVariant());
+	private async Task AddToCart()
+	{
+		var productVariant = GetSelectedVariant();
+		cartItem.EditionId = productVariant.EditionId;
+		cartItem.EditionName = productVariant.Edition.Name;
+		cartItem.Image = product.Image;
+		cartItem.Price = productVariant.Price;
+		cartItem.ProductId = productVariant.ProductId;
+		cartItem.ProductTitle = product.Title;
+		await CartService.AddToCart(cartItem);
 	}
 }
