--- a/Client/Shared/NavMenu.razor.css
+++ b/Client/Shared/NavMenu.razor.css
@@ -32,7 +32,8 @@
     }
 
     .nav-item ::deep a {
-        color: #d7d7d7;
+        /*color: #d7d7d7;*/
+        color: green;
         border-radius: 4px;
         height: 3rem;
         display: flex;
@@ -40,15 +41,18 @@
         line-height: 3rem;
     }
 
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
+        .nav-item ::deep a.active {
+            background-color: rgba(255,255,255,0.25);
+            /*color: white;*/
+            color: green;
+        }
 
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
+        .nav-item ::deep a:hover {
+            background-color: rgba(255,255,255,0.1);
+            /*color: white;*/
+            box-shadow: 0 0 4px black;
+            color: green;
+        }
 
 @media (min-width: 641px) {
     .navbar-toggler {
