removing a beautiful style solution

--- a/Client/Shared/TopMenu.razor
+++ b/Client/Shared/TopMenu.razor
@@ -23,8 +23,8 @@
 	</NotFoundTemplate>
 </BlazoredTypeahead>
 
-<a href="cart" class="btn btn-info"  style="background: lightgreen; color: green">
-	<i class="oi oi-cart" style="color: green"></i>
+<a href="cart" class="btn btn-info">
+	<i class="oi oi-cart"></i>
 	Cart
 	<span class="badge badge-pill badge-light">@GetProductCount()</span>
 </a>
