--- a/Client/Shared/NavMenu.razor.css
+++ b/Client/Shared/NavMenu.razor.css
@@ -32,8 +32,7 @@
     }
 
     .nav-item ::deep a {
-        /*color: #d7d7d7;*/
-        color: green;
+        color: #d7d7d7;
         border-radius: 4px;
         height: 3rem;
         display: flex;
@@ -43,15 +42,12 @@
 
         .nav-item ::deep a.active {
             background-color: rgba(255,255,255,0.25);
-            /*color: white;*/
-            color: green;
+            color: white;
         }
 
         .nav-item ::deep a:hover {
             background-color: rgba(255,255,255,0.1);
-            /*color: white;*/
-            box-shadow: 0 0 4px black;
-            color: green;
+            color: white;
         }
 
 @media (min-width: 641px) {
