--- a/Client/Pages/Cart.razor
+++ b/Client/Pages/Cart.razor
@@ -22,7 +22,7 @@ else
 				<button class="btn-delete" @onclick="@(()=>DeleteItem(item))">Убрать</button>
 				
 				<EditForm Model="item">
-					<InputNumber id="quantity" @bind-Value="item.Quantity" class="form-control" style="width: 70px" />
+					<InputNumber id="quantity" min="1" max="100" @bind-Value="item.Quantity" class="form-control" style="width: 70px" />
 				</EditForm>
 
 			</div>
