--- a/Client/Pages/ProductDetails.razor
+++ b/Client/Pages/ProductDetails.razor
@@ -36,7 +36,7 @@
 		}
 		<EditForm Model="cartItem">
 			<div class="form-group">
-				<InputNumber id="quantity" @bind-Value="cartItem.Quantity" class="form-control" style="width: 70px;" /> 
+				<InputNumber id="quantity" min="1" max="100" @bind-Value="cartItem.Quantity" class="form-control" style="width: 70px;" /> 
 			</div>
 		</EditForm>
 
