feat: Try to merge

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -18,7 +18,7 @@ else
             <h1>Добро пожаловать в магазин ключей Steam</h1>
         </NotAuthorized>
         <Authorized>
-            <h1>Добро пожаловать обратно, @LocalStorage.GetItemAsString("username")</h1>
+            <h1>Добро пожаловать обратно.</h1>
         </Authorized>
     </AuthorizeView>
     
