--- a/Client/Pages/FetchData.razor
+++ b/Client/Pages/FetchData.razor
@@ -19,6 +19,7 @@ else
                 <th>Temp. (C)</th>
                 <th>Temp. (F)</th>
                 <th>Summary</th>
+                <th>Username</th>
             </tr>
         </thead>
         <tbody>
@@ -29,6 +30,7 @@ else
                     <td>@forecast.TemperatureC</td>
                     <td>@forecast.TemperatureF</td>
                     <td>@forecast.Summary</td>
+                    <td>@forecast.Username</td>
                 </tr>
             }
         </tbody>
