--- a/Client/Pages/Login.razor
+++ b/Client/Pages/Login.razor
@@ -1,29 +1,45 @@
 ﻿@page "/login"
+@using BlazorShop.Shared
+@inject HttpClient Http
+@inject IJSRuntime jsr
 @inject ILocalStorageService LocalStorage
 @inject NavigationManager NavigationManager
 @inject AuthenticationStateProvider AuthStateProvider
 
 <h3>Login</h3>
 
-<EditForm Model="user" OnSubmit="HandleLogin">
-    <div class="form-group">
-        <label for="username">Username</label>
-        <InputText id="username" @bind-Value="user.Username" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <InputText id="passord" @bind-Value="user.Password" type="password" class="form-control" />
-    </div>
-    <button type="submit" class="btn btn-primary">Войти</button>
+<EditForm Model="user" OnValidSubmit="OnValid" style="max-width:500px;">
+	<DataAnnotationsValidator />
+	<ValidationSummary />
+	<div class="mb-2">
+		<InputText class="form-control" @bind-Value="user.email" placeholder="Enter Email"></InputText>
+	</div>
+	<div class="mb-2">
+		<InputText type="password" class="form-control" @bind-Value="user.password" placeholder="Enter Password"></InputText>
+	</div>
+	<div class="mb-2 text-right">
+		<button class="btn btn-secondary" disabled="@isDisabled">Войти</button>
+	</div>
 </EditForm>
 
 @code {
-    private User user = new User();
-    private async void HandleLogin()
-    {
-        Console.WriteLine("Log me in!");
-        await LocalStorage.SetItemAsync<string>("username", user.Username);
-        await AuthStateProvider.GetAuthenticationStateAsync();
-        NavigationManager.NavigateTo("");
-    }
+    LoginModel user = new LoginModel();
+	string message = string.Empty;
+	bool isDisabled = false;
+
+	private async Task OnValid()
+	{
+		isDisabled = true;
+		using (var msg = await Http.PostAsJsonAsync<LoginModel>("/api/auth/login", user, System.Threading.CancellationToken.None))
+		{
+			if (msg.IsSuccessStatusCode)
+			{
+				LoginResult result = await msg.Content.ReadFromJsonAsync<LoginResult>();
+				message = result.message;
+				isDisabled = false;
+				if (result.success)
+					await jsr.InvokeVoidAsync("localStorage.setItem", "user", $"{result.email};{result.jwtBearer}").ConfigureAwait(false);
+			}
+		}
+	}
 }
